--- a/wp-content/mu-plugins/covenant-core/src/scss/base/_mixins.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/base/_mixins.scss
@@ -1,11 +1,18 @@
-@mixin visually-hidden() {
-  border: 0 !important;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  height: 1px !important;
-  left: -9999px !important;
-  overflow: hidden;
-  padding: 0 !important;
-  position: absolute !important;
-  width: 1px !important;
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+
+  &::before {
+    content: '';
+    display: block;
+    padding-top: ($height / $width) * 100%;
+    width: 100%;
+  }
+
+  > .content {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 }
