--- a/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
@@ -1,2 +1,10 @@
 @import 'base/variables';
-@import './blocks/page-header/style';
+@import 'base/mixins';
+
+@tailwind base;
+
+@import 'blocks/page-header/style';
+@import 'utils/pin';
+@import 'utils/aspect';
+
+@tailwind utilities;
