--- a/wp-content/mu-plugins/covenant-core/src/scss/utils/_stop-scroll.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/utils/_stop-scroll.scss
@@ -1,9 +1,12 @@
 .stop-scroll {
   position: relative;
 
-  & div:first-child {
+  div:first-child {
+    bottom: 0;
+    left: 0;
     position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
+    right: 0;
+    top: 0;
     z-index: 99;
   }
 }
