Working on blocks

--- a/wp-content/mu-plugins/covenant-core/src/scss/base/_variables.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/base/_variables.scss
@@ -4,12 +4,11 @@ $md: '768px';
 $lg: '992px';
 $xl: '1200px';
 
-$black: #273444;
-$grey: #c9ccd0;
+$black: #03293b;
+$grey: #f2f4f5;
 $white: #fff;
-$green: #16a9a9;
-$yellow: #f9a02d;
-$red: #ed3e37;
+$primary: #5ba5bf;
+$primary-dark: #436979;
 
 $animation-base: 0.2s;
 
