--- a/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
@@ -1,6 +1,14 @@
+@import 'vendor/module';
 @import 'base/variables';
 @import 'base/mixins';
+@import 'components/drawer';
 
 @import 'blocks/page-header/style';
+@import 'blocks/heading-base/style';
+@import 'blocks/quote/style';
+@import 'blocks/wrapper/style';
+@import 'blocks/split-header/style';
+@import 'blocks/drawer/style';
+
 @import 'utils/pin';
 @import 'utils/aspect';
