--- a/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
@@ -9,6 +9,7 @@
 @import 'blocks/wrapper/style';
 @import 'blocks/split-header/style';
 @import 'blocks/drawer/style';
+@import 'blocks/link-button/style';
 
 @import 'utils/pin';
 @import 'utils/aspect';
