--- a/wp-content/mu-plugins/covenant-core/src/scss/components/_contact-form.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/components/_contact-form.scss
@@ -1,50 +1,27 @@
-.connect-form {
+.cpc-form {
   & .gform_body {
-    & .connect-form__input {
+    & .cpc-form__input {
+      @apply m-0 p-0 mb-3;
       width: 100%;
-      position: relative;
-      margin: 0 0 6rem 0;
 
       & > label {
-        position: absolute;
-        bottom: 2rem;
-        left: 0rem;
-        color: $white;
-        font-size: 4rem;
-        opacity: 0.5;
-        transition: all 0.2s ease-in;
-        transform-origin: bottom left;
+        @apply text-white font-bold;
 
         &.label-hide {
           display: none;
         }
       }
 
-      &.connect-form__textarea > label {
-        bottom: 2.75rem;
-      }
-
-      &.connect-form__input--active > label {
-        transform: scale(0.75) translateY(-11rem);
-      }
-
       &
         .ginput_container
         input:not([type='radio']):not([type='checkbox']):not([type='submit']):not([type='button']):not([type='image']):not([type='file']) {
-        width: 100%;
-        background-color: transparent;
-        border: none;
-        border-bottom: 1px solid rgba($white, 0.5);
+        @apply border border-white p-4 text-white leading-none w-full bg-transparent opacity-50;
         border-radius: 0px !important;
-        padding: 2rem 0;
-        color: $white;
-        line-height: 1;
-        height: 44px;
 
         &:focus,
         &:active {
+          @apply opacity-100;
           outline: none;
-          border-bottom: 1px solid rgba($white, 1);
         }
       }
 
@@ -75,27 +52,13 @@
   }
 
   & div.gform_footer {
-    text-align: right;
     margin-top: 0;
 
     & input[type='submit'] {
-      @apply block no-underline font-bold px-8 relative text-center text-white font-display uppercase rounded text-sm border bg-green border-green;
-      padding-top: 4rem;
-      padding-bottom: 3.5rem;
-      // text-decoration: none;
-      // display: block;
-      // width: 100%;
-      // padding: 4rem 12rem;
-      // margin: 0;
-      // border: 1px solid $white;
-      // text-align: center;
-      // color: $white;
-      // border-color: $white;
-      // background-color: transparent;
-      // cursor: pointer;
+      @apply bg-primary text-white font-sans uppercase px-6 py-3 inline-block font-bold border   border-primary text-center w-full;
 
       &:hover {
-        background-color: darken($green, 5%);
+        @apply bg-primary-dark border-primary-dark;
       }
 
       &:disabled {
