--- a/wp-content/mu-plugins/covenant-core/src/scss/utils/_spacing.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/utils/_spacing.scss
@@ -1,14 +1,9 @@
 @responsive {
   .mt-nav {
-    margin-top: 14rem;
+    margin-top: 72px;
   }
 
   .pt-nav {
-    padding-top: 14rem;
-  }
-
-  .py-nav {
-    padding-bottom: 14rem;
-    padding-top: 14rem;
+    padding-top: 72px;
   }
 }
