--- a/wp-content/mu-plugins/covenant-core/src/scss/components/_buttons.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/components/_buttons.scss
@@ -36,4 +36,12 @@
   &--outline-light:hover {
     @apply bg-primary border-primary text-white;
   }
+
+  &--outline-white {
+    @apply bg-transparent text-white border-white;
+  }
+
+  &--outline-white:hover {
+    @apply bg-white text-black border-white;
+  }
 }
