--- a/wp-content/mu-plugins/covenant-core/src/scss/sundays.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/sundays.scss
@@ -10,6 +10,7 @@
 @import './components/contact-form';
 @import './components/general-content';
 @import './components/menu-toggle';
+@import './components/popup';
 @import './layout/header';
 @import './layout/footer';
 @import './pages/sundays';
