--- a/wp-content/mu-plugins/covenant-core/src/scss/components/_contact-form.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/components/_contact-form.scss
@@ -26,27 +26,15 @@
       }
 
       & .ginput_container textarea {
-        width: 100%;
-        height: 44px;
-        background-color: transparent;
-        border: none;
-        border-bottom: 1px solid rgba($white, 0.5);
+        @apply border border-white p-4 bg-transparent opacity-50 text-white w-full text-base;
+        height: 120px;
         border-radius: 0px !important;
-        padding: 2rem 0;
-        color: $white;
 
         &:focus,
         &:active {
+          @apply opacity-100;
           outline: none;
-          border-bottom: 1px solid rgba($white, 1);
         }
-      }
-
-      &--name {
-        width: 50%;
-      }
-      &--number {
-        width: 50%;
       }
     }
   }
@@ -56,6 +44,25 @@
 
     & input[type='submit'] {
       @apply bg-primary text-white font-sans uppercase px-6 py-3 inline-block font-bold border   border-primary text-center w-full;
+
+      &:hover {
+        @apply bg-primary-dark border-primary-dark;
+      }
+
+      &:disabled {
+        opacity: 0.5;
+        pointer-events: none;
+        cursor: none;
+      }
+    }
+  }
+}
+
+.form--dark-button {
+  .cpc-form div.gform_footer {
+
+    & input[type='submit'] {
+      @apply bg-black border-black;
 
       &:hover {
         @apply bg-primary-dark border-primary-dark;
