--- a/wp-content/mu-plugins/covenant-core/src/scss/groups.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/groups.scss
@@ -12,6 +12,7 @@
 @import './components/menu-toggle';
 @import './components/popup';
 @import './components/post-nav';
+@import './components/select';
 @import './layout/header';
 @import './layout/footer';
 @import './pages/groups';
