--- a/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
@@ -2,6 +2,7 @@
 @import 'base/variables';
 @import 'base/mixins';
 @import 'components/drawer';
+@import 'components/general-content';
 
 @import 'blocks/page-header/style';
 @import 'blocks/heading-base/style';
