--- a/wp-content/mu-plugins/covenant-core/src/scss/blocks/page-header/_style.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/blocks/page-header/_style.scss
@@ -7,6 +7,7 @@
 .page-header {
   @apply relative bg-grey mb-8;
   @include aspect-5-3();
+  @include full-width();
 
   & &__img {
     @apply absolute top-0 left-0 w-full h-full object-cover;
