--- a/wp-content/mu-plugins/covenant-core/src/scss/blocks/quote/_style.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/blocks/quote/_style.scss
@@ -7,6 +7,10 @@
 
   &__source {
     @apply font-sans font-bold m-0 leading-tight text-base;
+
+    & cite {
+      @apply not-italic;
+    }
   }
 }
 
