--- a/wp-content/mu-plugins/covenant-core/src/scss/blocks/page-header/_editor.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/blocks/page-header/_editor.scss
@@ -1,4 +1,17 @@
-img {
-  border: 0;
-  display: initial;
+/**
+ * #.# Styles
+ *
+ * CSS for both Frontend+Backend.
+ */
+
+ .page-header {
+
+  & .editor-rich-text {
+    @apply absolute top-0 left-0 right-0 bottom-0 flex items-center justify-center font-sans uppercase text-center text-white text-3xl font-bold w-full;
+  }
+
+  &__heading {
+    position: static !important;
+    transform: none;
+  }
 }
