--- a/wp-content/mu-plugins/covenant-core/src/scss/blocks/split-panel/_style.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/blocks/split-panel/_style.scss
@@ -13,6 +13,10 @@
 
   &__content {
     @apply p-4 flex flex-col items-center justify-center w-5/6 mx-auto max-w-xl;
+
+    & > p {
+      @apply mb-4;
+    }
   }
 }
 
