Finished up upcoming-events

--- a/wp-content/mu-plugins/covenant-core/src/scss/block-editors.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-editors.scss
@@ -52,3 +52,4 @@
 @import 'blocks/split-panel/editor';
 @import 'blocks/drawer/editor';
 @import 'blocks/link-button/editor';
+@import 'blocks/upcoming-events/editor';
