--- a/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
@@ -62,6 +62,7 @@
 @import 'blocks/split-panel/style';
 @import 'blocks/drawer/style';
 @import 'blocks/link-button/style';
+@import 'blocks/upcoming-events/style';
 
 @import 'utils/pin';
 @import 'utils/aspect';
