--- a/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
@@ -13,6 +13,34 @@
   @include wide-width();
 }
 
+@include media('>=1464px') {
+  .alignwide {
+    @include wide-width-max();
+  }
+}
+
+.aligncenter iframe {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.wp-embed-aspect-16-9 {
+  @include aspect-ratio(16, 9);
+}
+
+.wp-block-embed__wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.wp-block-embed__wrapper iframe {
+  width: 100%;
+  height: 100%;
+}
+
 .wp-block-paragraph {
   @apply font-sans;
 }
