Removing menu scroll on open

--- a/wp-content/mu-plugins/covenant-core/src/scss/layout/_header.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/layout/_header.scss
@@ -72,6 +72,11 @@
     position: fixed;
     top: 0;
 
+    & .nav:after {
+      @apply bg-black absolute top-0 left-0 w-full h-full z-30;
+      content: '';
+    }
+
     & .logo-fill--icon {
       fill: $primary;
     }
