--- a/wp-content/mu-plugins/covenant-core/src/scss/pages/_staff.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/pages/_staff.scss
@@ -1,5 +1,5 @@
 .diamond-one {
-  position: absolute;
+  position: fixed;
   top: -35vw;
   left: 100%;
   transform: translateX(-50%);
@@ -8,7 +8,7 @@
 }
 
 .diamond-two {
-  position: absolute;
+  position: fixed;
   top: 600px;
   right: 100%;
   transform: translateX(50%);
