Adding missing google font

--- a/wp-content/mu-plugins/covenant-core/src/scss/home.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/home.scss
@@ -15,5 +15,6 @@
 @import './layout/footer';
 @import './pages/home';
 @import './utils/visually-hidden';
+@import './utils/animation';
 
 @tailwind utilities;
