--- a/wp-content/mu-plugins/covenant-core/src/scss/main.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/main.scss
@@ -12,5 +12,6 @@
 @import './layout/footer';
 @import './utils/spacing';
 @import './utils/visually-hidden';
+@import './utils/animation';
 
 @tailwind utilities;
