Added video transform

--- a/wp-content/mu-plugins/covenant-core/src/scss/pages/_home.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/pages/_home.scss
@@ -7,6 +7,10 @@
   line-height: 1;
 }
 
+.cta-video {
+  transform: translateY(-45%);
+}
+
 .cta-video video {
   margin-left: auto;
   width: 100%;
