--- a/wp-content/mu-plugins/covenant-core/src/scss/home.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/home.scss
@@ -11,6 +11,7 @@
 @import './components/contact-form';
 @import './components/general-content';
 @import './components/menu-toggle';
+@import './components/popup';
 @import './layout/header';
 @import './layout/footer';
 @import './pages/home';
