Added new table

--- a/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/block-styles.scss
@@ -103,6 +103,20 @@
   }
 }
 
+.wp-block-table {
+  @apply w-full;
+}
+
+.wp-block-table tr:first-child {
+  @apply font-bold;
+}
+
+.wp-block-table td {
+  @apply py-2 px-3;
+}
+
+
+
 @import 'blocks/page-header/style';
 @import 'blocks/heading-base/style';
 @import 'blocks/quote/style';
