Fixing menu and staff

--- a/wp-content/mu-plugins/covenant-core/src/scss/pages/_staff.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/pages/_staff.scss
@@ -16,6 +16,10 @@
   z-index: -1;
 }
 
+.featured-staff:nth-child(2n) {
+  @apply flex-row-reverse  mb-20;
+}
+
 @include media('>=#{$md}') {
   .staff-item {
     width: calc( ( 100% / 3 ) - 1rem);
