Fixing video style

--- a/wp-content/mu-plugins/covenant-core/src/scss/pages/_home.scss
+++ b/wp-content/mu-plugins/covenant-core/src/scss/pages/_home.scss
@@ -20,6 +20,11 @@
   background-image: linear-gradient(to bottom, rgba($black, 0), rgba($black, 0.75) 70%, rgba($black, 0.85) 100%)
 }
 
+.cpc-popup__content {
+  width: 80vw;
+  height: 45vw;
+}
+
 @include media('>=#{$md}') {
   .cta-video {
     transform: translateY(-160px);
